objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Check_Out_Date__c</fullName>
        <label>Check Out Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Check_Out_Distance_From_Record_mi__c</fullName>
        <label>Check Out Distance From Record (mi)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Check_Out_Latitude__c</fullName>
        <label>Check Out Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Check_Out_Longitude__c</fullName>
        <label>Check Out Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Check_out_Accuracy_m__c</fullName>
        <label>Check out Accuracy (m)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Created_Latitude__c</fullName>
        <label>Created Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Created_Location_Accuracy_m__c</fullName>
        <label>Created Location Accuracy (m)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Created_Location_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created Location Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_Longitude__c</fullName>
        <label>Created Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DB_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This is used by the &quot;Perfect Date Wizard&quot; SE tool to adjust the Due Date on a task or event.</description>
        <label>DB Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distance_From_Record_mi__c</fullName>
        <label>Distance From Record (mi)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>This is used to consistently import data to a version of the SDO and translate data into other languages.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FSL__Count_of_Events__c</fullName>
        <description>Count of all events</description>
        <formula>IF( IsTask,0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Count of all events</inlineHelpText>
        <label>Count of Events</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Count_of_Tasks__c</fullName>
        <formula>IF( IsTask,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count of Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Event_Type__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Service Appointment</fullName>
                </value>
                <value>
                    <fullName>Resource Absence</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>This custom field is required to expose the Activity Type field to reporting.  It is updated automatically by a trigger called &quot;qbranch_activity_type_update&quot;.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Call</fullName>
                    <default>true</default>
                    <label>Call</label>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Prep</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>analyticsdemo_batch_id__c</fullName>
        <label>analyticsdemo_batch_id__c</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__BaseObjectId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Maps Base Object</label>
        <referenceTo>maps__BaseObject__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>BaseObjectIds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__LayerId__c</fullName>
        <label>Layer Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__WA_AdvRouteWaypoint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the default lookup to associate the Advanced Route Waypoint</description>
        <label>Maps Advanced Route Waypoint</label>
        <referenceTo>maps__AdvRouteWaypoint__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pi__pardot_source_id__c</fullName>
        <description>Identifies the Pardot record that caused this activity to be created.</description>
        <externalId>true</externalId>
        <label>Pardot Source Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <columns>TASK.TYPE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>TASK.STATUS</columns>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>